  clashes with user defined resource IDs.

The following changes have been made to the Win32++ code:
Added CWnd::OnNotifyReflect
Added CWnd::Attach
Added CWnd::AttachDlgItem
Added CWnd::CallPrevWindow
Added CWnd::Detach
Added CRebar::ResizeBand
Added CStatusbar::CreatePanes
Added CStatusbar::GetPaneText
Added CStatusbar::SetPaneText
Added CStatusbar::SetPaneWidth
Added CToolbar::GetButtonState
Added CToolbar::GetButtonStyle
Added CToolbar::GetItemRect
Added CToolbar::HitTest
Added CToolbar::SetButtons
Added CToolbar::SetButtonState
Added CToolbar::SetButtonStyle
Added CToolbar::SetButtonText
Added CToolbar::SetImageList
Added CToolbar::SetSizes
Added CFrame::GetRebar
Added CFrame::GetStatusbar
Added CFrame::GetToolbar
Added CFrame::SetStatusIndicators
Added CFrame::ToolbarNotify
Added CFrame:: UseStatusIndicators
Added CMDIFrame::GetMDIClient
Added CMDIFrame::GetActiveChild
Removed CFrame::SetToolbarData
Removed CFrame::OnFrameCreated.  Use CFrame::OnInitialUpdate instead.
Removed CSplitter::OnNotify
CFrame::AddMenubarBand modified to CFrame::AddMenubarBand(int nHeight)
CFrame::AddToolbarBand modified to CFrame::AddToolbarBand(int nHeight)
CToolbar::SetButtons modified to CToolbar::SetButtons(vector<UINT> ToolbarData)
CWnd::OnNotify modified, it now returns a LRESULT

Bug Fixes
* CFrame::OnHelp now returns the focus back to the window that had it before 
  OnHelp was called.
* CSplitter:: Fixed drawing of splitter bar

Incompatibilites with previous version
* Resource IDs have changed, mandating changes to resource.h and resource.rc
* Toolbar resource IDs are defined differently, mandating a change to 
  CMainframe's constructor. 
* OnFrameCreated is removed, use OnInitialUpdate instead.

Version 5.0
-----------
This version provides for MDI frames and adds a rebar control and menubar to
frames. A CSplitter class is also included to allow a horizontal or vertical
splitter bar to a CWnd object.

Summary of changes
------------------